     to the player for the first time or some other unspecified thing happens.
   * Force uniform font rendering settings across X11 and Apple OS X, avoiding
     color glitches resulting from incorrect applications of subpixel hinting
     (bug #20337).
   * Hide mod options from the user command prompt dialog in the MP lobby when
     not authenticated as a mod.
 * WML engine:
   * Added support for [object] duration=turn end
   * New or updated image path functions:
      * ~BW(): converts an image to black and white
      * ~NEG() now supports 0,1 or 3 arguments, allowing solarization effects
   * Added support for SLF in [label] when used inside an event
 * Miscellaneous and bug fixes:
   * Removed abandoned libana network API implementation.
   * Fixed bug#23201 Toggle icons display error in replay.
   * Added --wconsole switch to allocate a console on startup (Windows-only).
   * Added cwesnoth.cmd wrapper script to start Wesnoth with a console
     displaying stdout+stderr (Windows-only).
   * Updated mainline campaigns and multiplayer scenarios to use [filter] status=
     instead of [filter] [filter_wml] [status]
   * Fixed a segfault in [move_units_fake]

Version 1.13.0:
 * Security fixes:
   * Fixed arbitrary file read from WML/Lua API (CVE-2015-0844, bug #23440).
 * Add-ons client:
   * The Update All button is now displayed on all Add-on Manager views instead
     of just the Upgradable filter view, and enabled only when there is at
     least one add-on that may be upgraded.
 * Add-ons server:
   * Add-on metadata pattern blacklisting implemented.
   * Major internal refactoring done.
 * AI:
   * New Micro AI: Fast AI
   * Big Animals Micro AI: bug fix for units not attacking when [avoid_unit] is
     not set
   * Bottleneck Micro AI: bug fix for case when allied units are present
   * Coward Micro AI: new optional key attack_if_trapped=
   * Forest Animals Micro AI: bug fix for wander terrain lying on border hexes